--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1 id="hi">Hi</h1>
-    <script src="main.js"></script>
+    <div id="sonnet"></div>
+    <!-- <script src="main.js"></script> -->
+    <script src="stringchallenge.js"></script>
 </body>
 </html>
