--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 id="hi">Hi</h1>
     <div id="sonnet"></div>
     <!-- <script src="main.js"></script> -->
-    <script src="stringchallenge.js"></script>
+    <!-- <script src="stringchallenge.js"></script> -->
+    <script src="objectchallenge.js"></script>
 </body>
 </html>
